# icub-fun

./: start.sh~
action_selector/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  action_selector  action_selector.cpp  action_selector.cpp~  action_selector_demo  action_selector_demo.cpp  action_selector_demo.cpp~  cmake_install.cmake
cartesian_server/: CMakeLists.txt  CMakeLists.txt~  cartesian_server.cpp  cartesian_server.cpp~  joints.txt  joints.txt~  solverLauncher.xml
class/: MotorCommandGenerator.cpp~  MotorCommandGenerator.h  MotorCommandGenerator.h~  MotorController.cpp  MotorController.cpp~  MotorController.h~  NewObjPosClient.cpp  NewObjPosClient.cpp~  NewObjPosClient.h  ObjPosClient.cpp  ObjPosClient.cpp~  ObjPosClient.h  ObjPosClient.h~  ObjPosServer.cpp  ObjPosServer.h  ObjPosServer.h~  StringServer.cpp  StringServer.cpp~  StringServer.h  StringServer.h~  YarpPortReader.cpp  YarpPortReader.cpp~  YarpPortReader.h  YarpPortReader.h~  face_controller.cpp  face_controller.cpp~  face_controller.h  face_controller.h~
head_motor_calculator/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cartesian_server_backup.cpp  cartesian_server_backup.cpp~  cmake_install.cmake  head_motor_calculator  head_motor_calculator.cpp  head_motor_calculator.cpp~  head_turn.cpp~
head_turn/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  head_turn  head_turn.cpp  head_turn.cpp~  (+1 more)
vzTo/: CMakeLists.txt  ObjData.cpp  gaze.cpp  gazeCalculate.cpp  mGaze.cpp  mGaze.cpp~  obj_gaze_pos.txt  sync.cpp  vzMultiLed.cpp  vzOneLed.cpp
(+12 files in other folders)
